[workspace]
members = [
]

[package]
name = "libmodbus"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "libmodbus"
path = "src/c2rust-lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "modbus_client"
path = "src/main.rs"

[dependencies]
libc = "0.2"

